--- a/querys/querys.css
+++ b/querys/querys.css
@@ -13,8 +13,19 @@
 }
 
 @media (min-width: 720px) {
+    .barraSuperior{
+        display: flex;
+        align-content: center;
+        justify-content: space-between;
+    }
+    
     .logo {
-        width:11rem;
+        width: 11rem;
+        margin-left: 3rem;
+    }
+
+    .menu{
+        margin-right: 5rem;
     }
 
     .itemMenu{
@@ -27,12 +38,14 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: 20px;
+        margin: 2rem 3rem;
     }
     
     .rodape{
         display: flex;
         margin: 0.7rem;
-        justify-content: flex-end;
+        justify-content:flex-end;
+        margin-right: 3rem;
     }
 
     .logoSocial{
@@ -41,7 +54,7 @@
     }
 
     .linkSocial{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 }
 
