--- a/style.css
+++ b/style.css
@@ -134,10 +134,11 @@ hr{
 }
 
 .dev{
+    text-decoration: none;
     font-family: var(--terceiraFonte);
     font-size: small;
-    margin-top: 2rem;
-    margin-bottom: 0;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
     display: flex;
     color: whitesmoke;
     justify-content: center;
