--- a/style.css
+++ b/style.css
@@ -75,21 +75,31 @@ body{
     text-align: center;
     font-family: var(--segundaFonte);
     background-image: var(--botoes);
+    width: 22rem;
+}
+
+.ar1{
+    display: flex;
+    margin: 0.5rem;
+    justify-content: space-around;
+    border: whitesmoke solid 0.1rem;
+    height: 7rem;
+    width: 22rem;
 }
 
 .artigos{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    width: 25rem;
 }
 
 .descricao{
     color: whitesmoke;
-    margin: 0rem 0.7rem 0.7rem 0.7rem;
+    margin: 0rem 0.5rem 0.5rem 0.5rem;
     text-align: center;
     font-family: var(--terceiraFonte);
-    border: whitesmoke solid 0.1rem;
-    padding: 0.6rem;
+    padding: 0.5rem;
 }
 
 .linkSaibaMais{
@@ -102,7 +112,7 @@ body{
     border-radius: 1.5rem;
     width: fit-content;
     padding: 0.3rem;
-    align-self: flex-end;
+    align-self: end;
 }
 
 /* FOOTER */
