--- a/styles/mediaquerys.css
+++ b/styles/mediaquerys.css
@@ -1,8 +1,7 @@
 /* Estilos padrão (para dispositivos móveis, mobile-first) */
 body {
-    font-size: 16px;
-    padding: 10px;
-    margin: 0.7rem;
+    font-size: 1rem;
+    margin: 0.1rem;
   }
   
   /* Smartphones pequenos (até 480px) */
@@ -50,7 +49,7 @@ body {
 
     .barraRolagem .listaProjetos {
         display: inline-block;  /* Faz com que cada item fique em linha */
-        margin-right: 5rem;     /* Espaçamento entre os itens */
+        margin-right: 1rem;     /* Espaçamento entre os itens */
       }
 
     .listaProjetos{
@@ -60,7 +59,20 @@ body {
         padding: 0.5rem 0;
     }
 
+    main{
+      height: 35rem;
+    }
 
+    header{
+      height: 9rem;
+      margin-top: 1rem;
+    }
+    
+    .button{
+     padding: 0.3rem;
+     border-radius: 1.5rem;
+     font-size: 0.8rem;
+    }
   }
   
   /* Tablets (768px a 1024px) */
