correção de layout, atualização de resolução de posts, inclusao de novo post, melhoria na responsividade

--- a/styles/carrocel.css
+++ b/styles/carrocel.css
@@ -10,6 +10,11 @@
 
 .titulo_secao{
     font-family: var(--fontPrincipal);
+    margin-left: 1rem;
+}
+
+.titulo_secaoTelaP{
+    display: none;
 }
 
 .card__projetos{
